src/objects/Programs__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EstimatedSubscriptionOpportunityTM__c</fullName>
        <formula>(TotalSubscriptions__c /  IF(Total_Number_of_Units__c = 0, 1, Total_Number_of_Units__c) )*  Total_Number_of_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Subscription Opportunity (TM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Card_OpportunityTE__c</fullName>
        <label>Estimated Card Opportunity (T&amp;E)</label>
        <summarizedField>T_E_Program__c.of_Cards__c</summarizedField>
        <summaryForeignKey>T_E_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Card_Opportunity__c</fullName>
        <label>Estimated Card Opportunity (Fleet)</label>
        <summarizedField>FleetCard_Program__c.Number_of_Cards__c</summarizedField>
        <summaryForeignKey>FleetCard_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_PC_Card_Opportunity__c</fullName>
        <label>Estimated Card Opportunity (PC Card)</label>
        <summarizedField>PC_Card_Program__c.of_Cards__c</summarizedField>
        <summaryForeignKey>PC_Card_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend_OpportunityPC__c</fullName>
        <label>Estimated Spend Opportunity (PC Card)</label>
        <summarizedField>PC_Card_Program__c.Total_Spend__c</summarizedField>
        <summaryForeignKey>PC_Card_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend_Opportunity__c</fullName>
        <label>Estimated Spend Opportunity (T&amp;E)</label>
        <summarizedField>T_E_Program__c.Total_Spend__c</summarizedField>
        <summaryForeignKey>T_E_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Site__c</fullName>
        <label>Total # of Sites (SCM)</label>
        <summarizedField>SCM_Solution__c.of_Sites__c</summarizedField>
        <summaryForeignKey>SCM_Solution__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSubscriptions__c</fullName>
        <label>Total Subscriptions</label>
        <summarizedField>Telematics_Program__c.Monthly_Subscription_Unit__c</summarizedField>
        <summaryForeignKey>Telematics_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Gallons__c</fullName>
        <label>Estimated Volume Opportunity (Fleet)</label>
        <summarizedField>FleetCard_Program__c.Total_Gallons__c</summarizedField>
        <summaryForeignKey>FleetCard_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Units__c</fullName>
        <label>Estimated Unit Opportunity (Telematics)</label>
        <summarizedField>Telematics_Program__c.Number_of_Units__c</summarizedField>
        <summaryForeignKey>Telematics_Program__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_Sites_CardLock__c</fullName>
        <label>Total # of Sites (CardLock)</label>
        <summarizedField>CardLock__c.of_Sites__c</summarizedField>
        <summaryForeignKey>CardLock__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Competitive Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Estimated_Card_Opportunity__c</columns>
        <columns>Estimated_PC_Card_Opportunity__c</columns>
        <columns>Estimated_Card_OpportunityTE__c</columns>
        <columns>Estimated_Spend_OpportunityPC__c</columns>
        <columns>Estimated_Spend_Opportunity__c</columns>
        <columns>EstimatedSubscriptionOpportunityTM__c</columns>
        <columns>Total_Number_of_Units__c</columns>
        <columns>Total_Gallons__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>